correct all pom files how module project